Fixed formatting on smaller screens

--- a/404.html
+++ b/404.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Placeholder title</title>
+    <title>404 Page Not Found - Noah's Website</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <div class="topbar">
+    <div class="sidebar">
       <div class="homeimage">
-        <a href="https://odnahaon.github.io">
-          <img src="home.png" alt="Home image" width="50" height="50"/>
+        <a href="https://odnahaon.github.io" class="homeimagelink">
+          <img src="home.png" alt="Home image"/>
         </a>
       </div>
-      <a href="BlackBox.xhtml" target="_blank" class="toplinks">BlackBox</a>
-      <a href="About.xhtml" target="_blank" class="toplinks">About</a>
-      <a href="Credits.xhtml" target="_blank" class="toplinks">Credits</a>
+      <a href="BlackBox.html" target="_blank">BlackBox</a>
+      <a href="About.html" target="_blank">About</a>
+      <a href="Credits.html" target="_blank">Credits</a>
     </div>
-    <h2 style="text-align: center">Uh-oh.</h2>
-    <h1 style="text-align: center" class="serif">404 Error.</h1>
-    <p style="text-align: center">Looks like you wanted something that wasn't there. Try this:
-      <a href="https://odnahaon.github.io" class="links">Go home</a>
-    </p>
+    <div class="content">
+      <h2 style="text-align: center">Uh-oh.</h2>
+      <h1 style="text-align: center" class="serif">404 Error.</h1>
+      <p style="text-align: center">Looks like you wanted something that wasn't there. Try this:
+        <a href="https://odnahaon.github.io" class="links">Go home</a>
+      </p>
+    </div>
   </body>
 </html>
