--- a/BlackBox.html
+++ b/BlackBox.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Placeholder title</title>
+    <title>BlackBox - Noah's Website</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <div class="topbar">
+    <div class="sidebar">
       <div class="homeimage">
-        <a href="https://odnahaon.github.io">
-          <img src="home.png" alt="Home image" width="50" height="50"/>
+        <a href="https://odnahaon.github.io" class="homeimagelink">
+          <img src="home.png" alt="Home image"/>
         </a>
       </div>
-      <a href="BlackBox.xhtml" target="_blank" class="toplinks">BlackBox</a>
-      <a href="About.xhtml" target="_blank" class="toplinks">About</a>
-      <a href="Credits.xhtml" target="_blank" class="toplinks">Credits</a>
+      <a href="BlackBox.html" target="_blank">BlackBox</a>
+      <a href="About.html" target="_blank">About</a>
+      <a href="Credits.html" target="_blank">Credits</a>
     </div>
-    <h1>Hi! I'm a work in progress.</h1>
-    <a href="https://odnahaon.github.io" class="links">Go home</a>
+    <div class="content">
+      <h1>Hi! I'm a work in progress.</h1>
+      <a href="https://odnahaon.github.io" class="links">Go home</a>
+    </div>
   </body>
 </html>
