--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
       <a href="About.html" target="_blank">About</a>
       <a href="Credits.html" target="_blank">Credits</a>
     </div>
-    <div class="boxes">
-      <h2>Hi! I'm Noah Ando.</h2>
-      <p>This is a website that I designed and coded myself. Coding is something I'm very interested in, and I've taken it up as a hobby. Check out some of my creations below!</p>
-    </div>
-    <br />
-    <div class="boxes">
-      <h3>BlackBox</h3>
-      <p>BlackBox is a video game that I originally coded for my 8th grade project. It's based on the BlackBox board game by Eric Solomon. I've ported it over from Java onto this website! You can go here to play it: <a href="BlackBox.html" class="links">https://odnahaon.github.com/BlackBox/</a></p>
-      <p style="color:red"><strong>Note:</strong> BlackBox website version is a work in progress. To play it, download the JAR file from here: <a href="https://github.com/odnahaon/BlackBox/" class="links">https://github.com/odnahaon/BlackBox/</a></p>
-    </div>
-    <br />
-    <div class="boxes">
-      <h3>I'm planning other projects in the future!</h3>
-      <p>More projects will be added to this website once they are completed.</p>
+    <div class="content">
+      <div class="boxes">
+        <h2>Hi! I'm Noah Ando.</h2>
+        <p>This is a website that I designed and coded myself. Coding is something I'm very interested in, and I've taken it up as a hobby. Check out some of my creations below!</p>
+      </div>
+      <br />
+      <div class="boxes">
+        <h3>BlackBox</h3>
+        <p>BlackBox is a video game that I originally coded for my 8th grade project. It's based on the BlackBox board game by Eric Solomon. I've ported it over from Java onto this website! You can go here to play it: <a href="BlackBox.html" class="links">https://odnahaon.github.com/BlackBox/</a></p>
+        <p style="color:red"><strong>Note:</strong> BlackBox website version is a work in progress. To play it, download the JAR file from here: <a href="https://github.com/odnahaon/BlackBox/" class="links">https://github.com/odnahaon/BlackBox/</a></p>
+      </div>
+      <br />
+      <div class="boxes">
+        <h3>I'm planning other projects in the future!</h3>
+        <p>More projects will be added to this website once they are completed.</p>
+      </div>
     </div>
   </body>
 </html>
