Renamed files to have better URLs.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
           <img src="home.png" alt="Home image"/>
         </a>
       </div>
-      <a href="BlackBox.html" target="_blank">BlackBox</a>
-      <a href="About.html" target="_blank">About</a>
-      <a href="Credits.html" target="_blank">Credits</a>
+      <a href="blackbox" target="_blank">BlackBox</a>
+      <a href="about" target="_blank">About</a>
+      <a href="credits" target="_blank">Credits</a>
     </div>
     <div class="content">
       <div class="boxes">
@@ -25,7 +25,7 @@
       <br />
       <div class="boxes">
         <h3>BlackBox</h3>
-        <p>BlackBox is a video game that I originally coded for my 8th grade project. It's based on the BlackBox board game by Eric Solomon. I've ported it over from Java onto this website! You can go here to play it: <a href="BlackBox.html" class="links">https://odnahaon.github.com/BlackBox/</a></p>
+        <p>BlackBox is a video game that I originally coded for my 8th grade project. It's based on the BlackBox board game by Eric Solomon. I've ported it over from Java onto this website! You can go here to play it: <a href="blackbox" class="links">https://odnahaon.github.com/BlackBox/</a></p>
         <p style="color:red"><strong>Note:</strong> BlackBox website version is a work in progress. To play it, download the JAR file from here: <a href="https://github.com/odnahaon/BlackBox/" class="links">https://github.com/odnahaon/BlackBox/</a></p>
       </div>
       <br />
