Fixed files with no .html suffix.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
           <img src="home.png" alt="Home image"/>
         </a>
       </div>
-      <a href="blackbox" target="_blank">BlackBox</a>
-      <a href="about" target="_blank">About</a>
-      <a href="credits" target="_blank">Credits</a>
+      <a href="blackbox.html" target="_blank">BlackBox</a>
+      <a href="about.html" target="_blank">About</a>
+      <a href="credits.html" target="_blank">Credits</a>
     </div>
     <div class="content">
       <div class="boxes">
