Used the boxes class on other pages

--- a/about.html
+++ b/about.html
@@ -14,10 +14,12 @@
       <a href="blackbox.html" target="_blank">BlackBox</a>
       <a href="about.html" target="_blank">About</a>
       <a href="credits.html" target="_blank">Credits</a>
-      </div>
-      <div class="content">
+    </div>
+    <div class="content">
+      <div class="boxes">
         <h1>Hi! I'm a work in progress.</h1>
         <a href="https://odnahaon.github.io" class="links">Go home</a>
+      </div>
     </div>
   </body>
 </html>
