--- a/blackbox.html
+++ b/blackbox.html
@@ -16,8 +16,10 @@
       <a href="credits.html" target="_blank">Credits</a>
     </div>
     <div class="content">
-      <h1>Hi! I'm a work in progress.</h1>
-      <a href="https://odnahaon.github.io" class="links">Go home</a>
+      <div class="boxes">
+        <h1>Hi! I'm a work in progress.</h1>
+        <a href="https://odnahaon.github.io" class="links">Go home</a>
+      </div>
     </div>
   </body>
 </html>
