--- a/404.html
+++ b/404.html
@@ -16,11 +16,13 @@
       <a href="Credits.html" target="_blank">Credits</a>
     </div>
     <div class="content">
-      <h2 style="text-align: center">Uh-oh.</h2>
-      <h1 style="text-align: center" class="serif">404 Error.</h1>
-      <p style="text-align: center">Looks like you wanted something that wasn't there. Try this:
-        <a href="https://odnahaon.github.io" class="links">Go home</a>
-      </p>
+      <div class="boxes">
+        <h2 style="text-align: center">Uh-oh.</h2>
+        <h1 style="text-align: center" class="serif">404 Error.</h1>
+        <p style="text-align: center">Looks like you wanted something that wasn't there. Try this link:
+          <a href="https://odnahaon.github.io" class="links">Go home</a>
+        </p>
+      </div>
     </div>
   </body>
 </html>
