Fix pages not scaling on mobile

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <title>About - Noah's Website</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/c31a0f4a3b.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body>
     <a name="top"></a>
