Fix subnav displaying in wrong place causing issues on mobile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <div class="subnav">
         <a class="subnavbtn">Projects <i class="fa fa-caret-down"></i></a>
-        <div class="subnav-content">
+        <div class="subnav-content" id="subnav-content1">
           <a href="blackbox.html" target="_blank">BlackBox</a>
         </div>
       </div>
