--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Noah's Website</title>
+    <title>Luna's Website</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/c31a0f4a3b.css">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -25,7 +25,7 @@
     </div>
     <div class="content">
       <div class="boxes">
-        <h2>Hi! I'm Noah Ando.</h2>
+        <h2>Hi! I'm Luna Ando.</h2>
         <p>This is a website that I designed and coded myself. Coding is something I'm very interested in, and I've taken it up as a hobby. Check out some of my creations below!</p>
       </div>
       <br />
