--- a/credits.html
+++ b/credits.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Credits - Noah's Website</title>
+    <title>Credits - Luna's Website</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/c31a0f4a3b.css">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
