--- a/captcha.html
+++ b/captcha.html
@@ -1,1 +1,13 @@
-
+<html>
+  <head>
+    <title>reCAPTCHA</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  </head>
+  <body>
+    <form action="?" method="POST">
+      <div class="g-recaptcha" data-sitekey="6Lf6fjgmAAAAAGwf3NX32roda-di1a-GXy2jCJ96"></div>
+      <br/>
+      <input type="submit" value="Submit">
+    </form>
+  </body>
+</html>
