--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="content">
       <div class="boxes">
-        <h2>Hi! I'm Luna Ando.</h2>
+        <h2>Hi! I'm Luna.</h2>
         <p>This is a website that I designed and coded myself. Coding is something I'm very interested in, and I've taken it up as a hobby. Check out some of my creations below!</p>
       </div>
       <br />
